@@ -1,5 +1,10 @@
 2000-04-03  Chema Celorio  <chema@celorio.com>
 
+	* gedit-undo.c: Cleaned the debug code
+	  it now uses gedit_debug_mess.
+
+	* gedit-utils.h: Added more debug types
+
 	* gedit-menus.c (gedit_edit_menu): Moved all the
   	  menus definition to gedit-menus from gE_mdi.c
 	  (gedit_tab_menu): Disbled the windows menu.
